update changes to return to the previous page

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <div class="row text-center mt-5" style="margin-bottom: -10%;">
                                 <div class="col-md-4 col-sm-6 ">
                                     <div href="#" class="arrow arrow-left"
-                                        onClick="showAndHideElement('gift_to','begin_page','NULL')">
+                                        onClick="returnButton('gift_to','begin_page')">
                                         <strong>Volver</strong>
                                     </div>
                                 </div>
@@ -112,8 +112,7 @@
 
                     <div class="row text-center mt-5" style="margin-bottom: -10%;">
                         <div class="col-md-4 col-sm-6 ">
-                            <div href="#" class="arrow arrow-left"
-                                onClick="showAndHideElement('characteristics','gift_to')">
+                            <div href="#" class="arrow arrow-left" onClick="returnButton('characteristics','gift_to')">
                                 <strong>Volver</strong>
                             </div>
                         </div>
@@ -133,7 +132,7 @@
                     <div class="row text-center mt-5" style="margin-bottom: -10%;">
                         <div class="col-md-4 col-sm-6 ">
                             <div href="#" class="arrow arrow-left"
-                                onClick="showAndHideElement('price_range','gift_to')"><strong>Volver</strong></div>
+                                onClick="returnButton('price_range','characteristics')"><strong>Volver</strong></div>
                         </div>
                     </div>
                 </div>
@@ -159,8 +158,9 @@
                     </div>
                     <div class="row text-center mt-5" style="margin-bottom: -10%;">
                         <div class="col-md-4 col-sm-6 ">
-                            <div href="#" class="arrow arrow-left"
-                                onClick="showAndHideElement('choose_gitf','gift_to')"><strong>Volver</strong></div>
+                            <div href="#" class="arrow arrow-left" onClick="returnButton('choose_gitf','price_range')">
+                                <strong>Volver</strong>
+                            </div>
                         </div>
                     </div>
                 </div>
