update view and error message

--- a/index.html
+++ b/index.html
@@ -50,18 +50,19 @@
                             <div class="container">
                                 <div class="section-content">
                                     <h2 class="section-title">
-                                        <strong class="text-black-italic">Gracias por tu compra</strong>
+                                        <img src="" width="200" height="120" id="brand-logo"><br>
+                                        <strong class="text-black-italic">¡Muchas gracias por tu compra!</strong>
                                     </h2>
                                     <div class="row text-center d-flex justify-content-center">
                                         <div class="col-md-4 col-sm-6 ">
-                                            <img class="rounded-circle" src="icons/ok.gif"
+                                            <img class="rounded-circle" src="icons/loading.gif"
                                                 alt="Generic placeholder image" width="140" height="140">
                                         </div>
                                     </div>
                                     <div class="row text-center d-flex justify-content-center">
-                                        <div class="col-md-4 col-sm-6 ">
-                                            <span class="text-black-italic font-medium">Estamos gestionando tu
-                                                información ...</span>
+                                        <div class="col-md-12 col-sm-12 ">
+                                            <span class="text-black-italic font-medium">En unos minutos recibirás un
+                                                e-mail con los detalles de tu pedido.</span>
                                         </div>
                                     </div>
                                 </div>
